fixes 2